# nmcpparrot

./: Cargo.toml  README.md
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: lib.rs
crates/mcp-core/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/nostr-memory-mcp/: Cargo.toml  README.md
crates/nostr-memory-mcp/src/: lib.rs  main.rs
src/: combined_mcp.rs  main.rs  process_management.rs  profile.rs  response_tracker.rs  rmcp.rs  utils.rs
src/goose_mcp/: commands.rs  goose_server.rs  mod.rs  types.rs
src/mcp/: chat.rs  events.rs  mod.rs  notes.rs  progress_enforcer.rs  server.rs  types.rs  validation.rs
src/multi_agent/: agent_manager.rs  agent_pool.rs  health_monitor.rs  message_bus.rs  mod.rs  orchestrator.rs  prompts.rs  resource_scheduler.rs  types.rs
src/nostr_mcp/: client.rs  encryption.rs  memory_manager.rs  mod.rs  server.rs  types.rs
src/searxng_mcp/: client.rs  mod.rs  server.rs  types.rs
