[package]
name = "nparrot"
version = "0.1.0"
authors = ["Daniel D'Aquino <daniel@daquino.me>"]
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
nostr-sdk = { version = "0.41", features = ["all-nips"] }
rmcp = { version = "0.1.5" , features = ["server", "transport-io"] }
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
num_cpus = "1.0"
rand = "0.8"
lazy_static = "1.4"
