[package]
name = "nostr-memory-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for Nostr-based memory storage"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-server = { path = "../mcp-server" }
rmcp = { version = "0.6.1", features = ["server", "transport-io"] }
anyhow = "1.0.94"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
indoc = "2.0.5"
nostr-sdk = { version = "0.43", features = ["all-nips"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
